--- a/000-default.conf
+++ b/000-default.conf
@@ -1,7 +1,23 @@
 <VirtualHost *:*>
     ProxyPreserveHost On
-
-
+    
+    ProxyPass /cuckoo http://127.0.0.1:8000/
+    ProxyPassReverse /cuckoo http://127.0.0.1:8000/
+    
+    ProxyPass /guacamole http://127.0.0.1:8080/
+    ProxyPassReverse /guacamole http://127.0.0.1:8080/
+    
+    ProxyPass /irma http://127.0.0.1:8181/
+    ProxyPassReverse /irma http://127.0.0.1:8181/
+    
+    ProxyPass /mobsf http://127.0.0.1:8282/
+    ProxyPassReverse /cuckoo http://127.0.0.1:8282/
+    
+    ProxyPass /tpot http://127.0.0.1:8383/
+    ProxyPassReverse /tpot http://127.0.0.1:8383/
+    
+    ProxyPass /netdata http://127.0.0.1:19999/
+    ProxyPassReverse /netdata http://127.0.0.1:19999/
 
     ServerName localhost
 </VirtualHost>
