--- a/proxy-host.conf
+++ b/proxy-host.conf
@@ -2,10 +2,15 @@ Listen 443
 
 NameVirtualHost *:443
 <VirtualHost *:443>
-
+    ServerAdmin mkcade.ivancic@optiv.com
+    DocumentRoot /var/www/
+    ErrorLog ${APACHE_LOG_DIR}/error.log
+    CustomLog ${APACHE_LOG_DIR}/access.log combined
     SSLEngine On
-    SSLCertificateFile /etc/apache2/ssl/file.pem
-
+    SSLCertificateFile /etc/apache2/ssl/ca.crt
+    SSLCertificateKeyFile /etc/apache2/ssl/ca.key
+    ProxyPreserveHost On
+    
     ProxyPass /cuckoo http://127.0.0.1:8000/
     ProxyPassReverse /cuckoo http://127.0.0.1:8000/
     
@@ -24,4 +29,5 @@ NameVirtualHost *:443
     ProxyPass /netdata http://127.0.0.1:19999/
     ProxyPassReverse /netdata http://127.0.0.1:19999/
    
+   ServerName localhost
 </VirtualHost>
